<?xml version="1.0"?>
<package>
	<name>sf_description</name>
	<version>1.0.0</version>
	<description>Robot description files for the Sunflower Robot</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>xacro</run_depend>
	<run_depend>p2os_urdf</run_depend>
	<run_depend>dynamixel_description</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>joint_state_publisher</run_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
